# advent-of-code

./: .gitmodules  README.md
2015/: .gitignore  .ocamlformat  dune-project
2015/lib/: arrtbl.ml  arrtbl.mli  d01.ml  d02.ml  d03.ml  d04.ml  d05.ml  d06.ml  d07.ml  dune
2016/: .gitignore  README.md  mix.exs
2016/lib/: aoc2016.ex  d01.exs  d02.exs  d03.exs  day_01.exs  helpers.ex
2016/test/: aoc2016_test.exs  exp_test.exs
2017/: .tool-versions  Day01.roc  Day02.roc  Lib.roc  Option.roc  get_input.sh  main.roc
2017/roc/: Day01.roc  Day02.roc  Day03.roc  Day04.roc  Lib.roc  ListArr.roc  main.roc
2022/: go.mod
2022/day01/: day01.go  main.go
2022/day02/: main.go
2022/day03/: main.go
2022/day04/: main.go
2022/day05/: main.go
2022/day06/: main.go
2022/day07/: main.go
2022/day08/: main.go
2022/day09/: main.go  main_test.go
2022/day10/: main.go
2022/day11/: main.go  main_test.go
2022/day12/: main.go
2022/day13/: main.go
2022/day14/: main.go
2022/day15/: main.go  main_test.go
2022/day16/: main.go
2022/day19/: main.go
2022/day20/: main.go
2022/day21/: main.go  main_test.go
2022/day24/: main.go  main_test.go
2022/day25/: main.go  main_test.go
2022/fp/: fn.go  list.go  list_test.go
2022/helpers/: helper_test.go  helpers.go  ints.go  option.go  strings.go
2023/: aoc_2023.opam  dune-project
2023/lib/: arraymatrix.ml  dune  graph.ml  heap.ml  input.ml  list.ml  matrix.ml  string.ml  tree.ml  tuple.ml
2023/test/: dune
2024/: .gitignore  get_input.sh
2024/lib/: d01.exs  d02.exs  d03.exs  d04.exs  d05.exs  d06.exs  d07.exs  (+21 more)
(+25 files in other folders)
